# University-Work

./: README.md
CSCI1581/Lab_1/: HelloWorld.java
CSCI1581/Lab_10/: Fraction.java  Runner.java
CSCI1581/Lab_2/: Bouncer.java
CSCI1581/Lab_4/: GoodTempConverter.java
CSCI1581/Lab_5/: ExerciseOne.java  StudentRoster.java
CSCI1581/Lab_6/: Fraction.java  Runner.java
CSCI1581/Lab_7/: DynamicArray.java  Runner.java
CSCI1581/Lab_8/: LineSegment.java  Point2D.java  Runner.java  SetOfPoints.java  Triangle.java  answers.txt
CSCI1581/Lab_9/: Circle.java  Movable.java  Point2D.java  Runner.java  Shape.java  Triangle.java
CSCI1583/HW_2/: CombatCalculator1.java  CombatCalculator2.java  CombatCalculator3.java  CombatCalculator4.java  CombatCalculator5.java  CombatCalculator6.java  CombatCalculator7.java
CSCI1583/HW_3/: FoeBattleSimulator1.java  FoeBattleSimulator2.java  FoeBattleSimulator3.java
CSCI1583/HW_4/: FoeAdventureSimulator.java
CSCI1583/HW_5/: FoeAdventureSimulator.java  Room.java
CSCI1583/HW_6/: Dungeon.java  FoeAdventureSimulator.java  Monster.java  Player.java  Room.java  gameCharacter.java
CSCI2120/HW_1/src/: RealNumber.java
CSCI2120/HW_2/src/: ComplexNumber.java  ComplexNumberTest.java  RealNumberTest.java
CSCI2120/HW_3/src/: GroceryList.java  GroceryTracker.java
CSCI2120/HW_4/src/: StringMethods.java  StringMethodsTest.java
CSCI2120/HW_5/src/: BinarySearcher.java  InsertionSorter.java  LinearSearcher.java  LinearSearcherTest.java  MergeSorter.java  Searcher.java  SelectionSorter.java  Sorter.java
CSCI2121/Lab_1/: Fraction.java
CSCI2121/Lab_2/src/: Fraction.java  FractionTest.java  StringTest.java
CSCI2121/Lab_3/src/: Event.java  EventTextProcessor.java
CSCI2121/Lab_4/src/: Event.java  EventPlanner.java  Runner.java
CSCI2121/Lab_5/src/: Recursion.java  RecursionTest.java
CSCI2121/Lab_6/src/: IntergerList.java
CSCI2121/Lab_7/src/: LinearSearch.java  SelectionSort.java  SelectionSortTest.java
CSCI2121/Lab_9/src/: Geist.java  TheOneRing.java  runner.java
CSCI2125/HW 1/: BigOh.java  NumericalAnalysis.java  SomeFunction.java  TestNumericalAnalysis.java  function.java
CSCI2125/HW 2/: SinglyLinkedList.java
CSCI2125/HW 3/: AVLNode.java  AVLTree.java  HashTable.java  PrintAVLTree.java  runner.java
CSCI2125/HW 4/src/: Edge.java  FindShortestRoadPath.java  MapDataParser.java  Vertex.java  WeightedGraph.java
CSCI3301/PA1/FACTO_SORT/: Facto.s  Sort.s
CSCI4130/AES/: KeyRevEn.py
CSCI4130/DES/: DES-CBC.py  DES-CFB.py  DES-CTR.py  DES-ECB.py  DES-OFB.py
CSCI4130/EEA/: CLOCKCYCLES.py  EEA.py
CSCI4311/NetworkedChat/: Client.java  ClientGUI.java  ClientHandler.java  Server.java
CSCI4311/NetworkedGame/: Client.java  ClientGUI.java  ClientHandler.java  GameInstance.java  Server.java  Tile.java
CSCI4401/HW1/: parsengraph.py  pidgraph.gv  task1  task1_level  task1_level.c  task1_waitpid
CSCI4401/HW1/Ronquillo/: task1Q2.c  task1_waitpidQ3.c
CSCI4401/HW2/Ronquillo/: DiningPhilosopherQ2.py  DiningPhilosopherQ3.py  WordCounter-MultiTQ1.py  WordCounter-SingleTQ1.py
CSCI4401/HW4/: ._input1.txt  ._input2.txt  DeadlockDetection.py  DeadlockDetection1.py
CSCI4631/: .gitignore  CMakeLists.txt  README  README-WIN
CSCI4631/APPENDIX_A_EXAMPLES/: CMakeLists.txt
CSCI4631/APPENDIX_A_EXAMPLES/MAC_VERSIONS/: CMakeLists.txt
CSCI4631/APPENDIX_A_EXAMPLES/WINDOWS_VERSIONS/: CMakeLists.txt  append_example10.cpp  append_example2.cpp  append_example3.cpp  append_example4.cpp  append_example5.cpp  append_example6.cpp  append_example7.cpp  append_example8.cpp  append_example9.cpp
CSCI4631/CHAPTER02_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example2.1.cpp  example2.2.cpp  example2.3.cpp  example2.4.cpp  example2.4b.cpp  example2.5.cpp
CSCI4631/CHAPTER03_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example3.1.cpp  example3.2.cpp  example3.6.cpp
CSCI4631/CHAPTER04_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example4.1.cpp  example4.2.cpp  example4.3.cpp
CSCI4631/CHAPTER05_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example5.1.cpp  example5.2.cpp  example5.3.cpp  example5.6.cpp
CSCI4631/CHAPTER07_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example7.1.cpp  example7.2.cpp  example7.3.cpp
CSCI4631/CHAPTER08_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example8.1.cpp  example8.2.cpp  example8.3.cpp
CSCI4631/CHAPTER09_CODE/: CMakeLists.txt
CSCI4631/CHAPTER09_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example9.1.cpp  example9.2.cpp
CSCI4631/CHAPTER10_CODE/GENERAL_VERSIONS/: CMakeLists.txt  example10.1.cpp  example10.2.cpp  example10.3.cpp  example10.4.cpp
CSCI4631/CMake/Modules/: FindGLEW.cmake  FindLOCAL_GLUT.cmake
CSCI4631/Common/: InitShader.cpp
CSCI4631/HOMEWORK_02/: ComplexNumber.cpp  ComplexNumber.h  ComplexNumberTest.cpp  readme.txt
CSCI4631/HOMEWORK_03/: CMakeLists.txt  koch_curve.cpp
CSCI4631/HOMEWORK_05/: CMakeLists.txt  MeshBuffer.cpp  TriangleBuffer.cpp
CSCI4631/include/: Angel.h  mat.h
CSCI4631/lib/windows/: freeglut.lib  freeglutd.lib  glew32.lib  glew32d.lib
CSCI4631/shaders/MAC_VERSIONS/: fshader72.glsl  vshader72.glsl
CSCI4631/shaders/WINDOWS_VERSIONS/: vshader23.glsl
CSCI4670/Fractured/: DISCLAIMER
CSCI4670/Fractured/Project/: Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Project ECHO.sln
CSCI4670/Fractured/Project/Assets/Materials/: MazeTintedGlass.mat  New Material 1.mat  New Material.mat
CSCI4670/Fractured/Project/Assets/Models/: terrain.fbx
CSCI4670/Fractured/Project/Assets/Scenes/: fractured_main.unity  fractured_mainmenu.unity
CSCI4670/Fractured/Project/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
CSCI4670/Fractured/build x86/Fractured_Data/: app.info  globalgamemanagers.assets  level0.resS  level1.resS  sharedassets0.assets
CSCI4670/Gravity/Project/Gravity.gmx/: Gravity.project.gmx
CSCI4675/Kindled Light Prototype/Project/Kindled_Light_feature_prototype.gmx/: Kindled_Light_feature_prototype.project.gmx
CSCI4675/Kindled Light Release/: README.md
(+88 files in other folders)
